@@ -32,7 +32,9 @@ Changes in openair 0.9-0 [2013-02-13]
 *	Add max.freq option to windRose/pollutionRose to control
 	extent of radial limits
 *	Add map.res option to trajPlot and trajLevel and make default
-	lower resolution. Make default pollutant 'height' (always present)
+	lower resolution. Make default pollutant 'height' (always
+	present)
+*	Add Oslo and Rotterdam to trajectory database for 2010-2012
 
 Changes in openair 0.8-0 [2012-11-30]
 =====================================
